Adding JPA module.